--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,24 @@
-1=1
-2=2
-server.port=8888
-
-#使用本地的配置文件
-spring.profiles.active=native
+eureka:
+  client:
+    service-url:
+      defaultZone: http://hadoop1:8000/eureka/,http://hadoop2:8000/eureka/,http://hadoop3:8000/eureka/
+server:
+  port: 8080
+spring:
+  application:
+    name: user-service
+  datasource:
+    dbcp:
+      test-while-idle: true
+      validation-query: SELECT 1
+    password: ms123
+    url: jdbc:mysql://192.168.174.200:3306/microservice?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+    username: ms
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: true
